# app/Virtual/Models/Project.php
@@ -1,85 +1,0 @@
-<?php
-
-/**
- * @OA\Schema(
- *     title="Project",
- *     description="Project model",
- *     @OA\Xml(
- *         name="Project"
- *     )
- * )
- */
-class Project
-{
-
-    /**
-     * @OA\Property(
-     *     title="ID",
-     *     description="ID",
-     *     format="int64",
-     *     example=1
-     * )
-     *
-     * @var integer
-     */
-    private $id;
-
-    /**
-     * @OA\Property(
-     *      title="Name",
-     *      description="Name of the new project",
-     *      example="A nice project"
-     * )
-     *
-     * @var string
-     */
-    public $name;
-
-    /**
-     * @OA\Property(
-     *      title="Description",
-     *      description="Description of the new project",
-     *      example="This is the new project's description"
-     * )
-     *
-     * @var string
-     */
-    public $description;
-
-    /**
-     * @OA\Property(
-     *      title="Is completed",
-     *      description="Status of the project",
-     *      example="0"
-     * )
-     *
-     * @var boolean
-     */
-    public $is_completed;
-
-    /**
-     * @OA\Property(
-     *     title="Created at",
-     *     description="Created at",
-     *     example="2020-01-27 17:50:45",
-     *     format="datetime",
-     *     type="string"
-     * )
-     *
-     * @var \DateTime
-     */
-    private $created_at;
-
-    /**
-     * @OA\Property(
-     *     title="Updated at",
-     *     description="Updated at",
-     *     example="2020-01-27 17:50:45",
-     *     format="datetime",
-     *     type="string"
-     * )
-     *
-     * @var \DateTime
-     */
-    private $updated_at;
-}
