# app/Virtual/StoreProjectRequest.php
@@ -2,10 +2,11 @@
 
 /**
  * @OA\Schema(
- *      title="StoreProjectRequest",
+ *      title="Store Project Request",
  *      description="Store Project request body data",
  *      type="object",
  *      required={"name","description"},
+ *      @OA\Xml(name="StoreProjectRequest"),
  * )
  */
 class StoreProjectRequest
@@ -25,7 +26,7 @@ class StoreProjectRequest
      * @OA\Property(
      *      title="description",
      *      description="Description of the new project",
-     *      example="This is the new project's description",
+     *      example="This is the project's description",
      * )
      *
      * @var string
